objects/CSAPEN_Site_Map_UI_Configuration_Mgmt__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Archive_Where_Clause__c</fullName>
        <description>Stores a valid SOQL Where clause to provide for an additional filter on what records are cloned during the Archiving process.</description>
        <label>Additional Archive Where Clause</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Clone_Where_Clause__c</fullName>
        <description>Stores a valid SOQL Where clause to provide for an additional filter on what records are cloned during the Copying process.</description>
        <label>Additional Clone Where Clause</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_SOQL_Where_Clause__c</fullName>
        <description>Can add additional SOQL statements to be appended to the Where Clause</description>
        <label>Additional SOQL Where Clause</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_open_Activities_on_Archive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A checkbox field that specifies where or not to migrate (ie update) related Activities (Tasks &amp; Events) from the existing Account Plan related object to the newly generated Account Plan when a user opts to “Archive”.</description>
        <label>Copy open Activities on Archive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copy_open_Activities_on_Clone__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies where or not to migrate (ie update) related Activities (Tasks &amp; Events) from the existing Account Plan related object to the newly generated Account Plan when a user opts to “Copy”.</description>
        <label>Copy open Activities on Clone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Excluded_Clone_Fields__c</fullName>
        <description>Stores a comma delimited list of API Field names to be excluded in the cloning process. If a field is listed in this text field, the data stored in those fields will not be cloned.</description>
        <label>Excluded Clone Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FK_to_Parent_Object__c</fullName>
        <description>What is the foreign key field name used to link to the parent object</description>
        <label>FK to Parent Object</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identifier_Field__c</fullName>
        <description>What field is used to be displayed on the record hyperlink</description>
        <label>Identifier Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merge_Field_To_Parent_Object__c</fullName>
        <description>What is the merge field used to link to the parent record</description>
        <label>Merge Field To Parent Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>{!Account_Id}</fullName>
                </value>
                <value>
                    <fullName>{!Account_Name}</fullName>
                </value>
                <value>
                    <fullName>{!Case_ID}</fullName>
                </value>
                <value>
                    <fullName>{!Case_Number}</fullName>
                </value>
                <value>
                    <fullName>{!Case_Record_Type_Name}</fullName>
                </value>
                <value>
                    <fullName>{!Case_OwnerId}</fullName>
                </value>
                <value>
                    <fullName>{!Case_OwnerFull_Name}</fullName>
                </value>
                <value>
                    <fullName>{!Case_Record_Type_ID}</fullName>
                </value>
                <value>
                    <fullName>{!Case_Type}</fullName>
                </value>
                <value>
                    <fullName>{!Case_Plan_Year}</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Record_URL__c</fullName>
        <description>The URL used to create a new record</description>
        <label>New Record URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectName__c</fullName>
        <description>Object name listed in site map</description>
        <label>Object Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Label__c</fullName>
        <description>Object label referred to in site map</description>
        <label>Object Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>The order (from the top) the records are listed</description>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>atMostOne__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should there only be one record of this object type?</description>
        <label>at Most One?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>indent__c</fullName>
        <description>The number of indentations in from the left the section is listed</description>
        <label># of Identations (0,1,2)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isArchivable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the Copy Account Plan SControl will clone all records of that object type and re-create those records in the newly cloned CSAPEN Account Plan when a user opts to “Archive”. If not checked, no records will be cloned for that object type.</description>
        <label>isArchivable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isCloneable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the Copy Account Plan SControl will clone all records of that object type and re-create those records in the newly cloned CSAPEN Account Plan when the user opts to “Copy”. If not checked, no records will be cloned for that object type.</description>
        <label>isCloneable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>parent_object_name__c</fullName>
        <description>The name of the parent object</description>
        <label>Parent Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <description>Site Map UI Configuration Management</description>
    <label>zzCSAPEN Site Map UI Configuration Mgmt</label>
    <nameField>
        <displayFormat>SMCNEW-{00000}</displayFormat>
        <label>Site Map Configuration New Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CSAPEN Site Map UI Configuration Mgmt</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>